[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/fonts/Extrude.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Script/ui/PauseMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/sfx/Ui-Select.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/sfx/Ui-Navigate.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/sfx/Ui-Back.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 69
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="PauseMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -489.223, 125.034 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.286275, 0.0980392, 0.0980392, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 391.0
margin_top = 173.0
margin_right = 633.0
margin_bottom = 427.0
custom_constants/separation = 20

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 242.0
margin_bottom = 70.0

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 242.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
text = "Paused"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 242.0
margin_bottom = 254.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 51.0
margin_right = 191.0
margin_bottom = 164.0

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 140.0
margin_bottom = 38.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3"]
margin_left = 5.0
margin_right = 135.0
margin_bottom = 38.0

[node name="Resume" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer"]
margin_right = 130.0
margin_bottom = 38.0
custom_styles/focus = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "RESUME"
flat = true

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 42.0
margin_right = 140.0
margin_bottom = 80.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
margin_right = 140.0
margin_bottom = 38.0

[node name="Options" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 140.0
margin_bottom = 38.0
custom_styles/focus = SubResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "OPTIONS"
flat = true

[node name="CenterContainer4" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 84.0
margin_right = 140.0
margin_bottom = 122.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4"]
margin_left = 23.0
margin_right = 117.0
margin_bottom = 38.0

[node name="MMenu" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4/HBoxContainer"]
margin_right = 94.0
margin_bottom = 38.0
custom_styles/focus = SubResource( 5 )
custom_fonts/font = SubResource( 3 )
text = "MENU"
flat = true

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 126.0
margin_right = 140.0
margin_bottom = 164.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
margin_left = 29.0
margin_right = 111.0
margin_bottom = 38.0

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 82.0
margin_bottom = 38.0
custom_styles/focus = SubResource( 6 )
custom_fonts/font = SubResource( 3 )
text = "QUIT"
flat = true

[node name="NavigateSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="SelectSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="BackSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="gui_input" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer/Resume" to="." method="_on_Resume_gui_input"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3/HBoxContainer/Resume" to="." method="_on_Resume_mouse_entered"]
[connection signal="gui_input" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer/Options" to="." method="_on_Options_gui_input"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer/Options" to="." method="_on_Options_mouse_entered"]
[connection signal="gui_input" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4/HBoxContainer/MMenu" to="." method="_on_MMenu_gui_input"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer4/HBoxContainer/MMenu" to="." method="_on_MMenu_mouse_entered"]
[connection signal="gui_input" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer/Quit" to="." method="_on_Quit_gui_input"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer/Quit" to="." method="_on_Quit_mouse_entered"]
